--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "This e-shop was created by Abramov",
+  "description": "This e-shop created by Abramov",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "build": "nodemon index.js",
+    "start": "node index.js",  
+    "prestart": "npm run build",  
+    "postinstall": "sequelize db:migrate",  
+    "migrate": "sequelize db:migrate", 
+    "seed": "sequelize db:seed:all", 
+    "rollback": "sequelize db:migrate:undo:all",  
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Abramov",
   "license": "ISC",
