--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "fileupload": "^1.0.0",
     "jsonwebtoken": "^9.0.1",
     "mysql2": "^3.6.5",
-    "pg": "^8.11.1",
+    "package": "^1.0.1",
+    "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.35.1",
     "socket.io-client": "^4.7.2",
