--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@a2seven/yoo-checkout": "^1.1.4",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "cron": "^3.1.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
